# plx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  lefthook.yml  result
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
src/: color.rs  config.rs  main.rs  repo_status.rs  shell.rs
src/banner/: font.rs  mod.rs  render.rs  sysinfo.rs
src/segments/: aws.rs  character.rs  cmd_duration.rs  custom_command.rs  git.rs  hostname.rs  jobs.rs  k8s.rs  mod.rs  nix_shell.rs  node.rs  path.rs  prompt.rs  python.rs  registry.rs  reset.rs  rust_toolchain.rs  status.rs  tmux_title.rs  username.rs  venv.rs
src/weather/: args.rs  cache.rs  format.rs  location.rs  mod.rs  openmeteo.rs  openweather.rs  providers.rs
tests/: cli.rs
