[package]
name = "plx"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["banner"]
banner = ["dep:image"]

[dependencies]
git2 = "0.20"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
libc = "0.2"

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = true
strip = true
