[package]
name = "plx"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Powerline-styled prompt segments and tmux window titles for zsh"
repository = "https://github.com/mmichie/plx"
keywords = ["prompt", "powerline", "tmux", "zsh", "shell"]
categories = ["command-line-utilities"]

[features]
default = ["banner"]
banner = ["dep:image"]

[dependencies]
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = true
strip = true
